src/objects/Relationship_Lookup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <label>Female</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <label>Male</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neutral__c</fullName>
        <label>Neutral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Relationship Lookup</label>
</CustomObject>